--- a/shop.html
+++ b/shop.html
@@ -10,27 +10,6 @@
   <ul id="shopList"></ul>
   <a href="index.html">返回泡泡页面</a>
 
-  <script>
-    const skills = [
-      { name: '火球术', cost: 3 },
-      { name: '寒冰术', cost: 4 },
-      { name: '治愈术', cost: 2 }
-    ];
-    const shopList = document.getElementById('shopList');
-    const magic = parseInt(localStorage.getItem('magic') || '0');
-
-    skills.forEach(skill => {
-      const li = document.createElement('li');
-      li.innerText = `${skill.name}（需要魔法泡泡 ${skill.cost} 个）`;
-      const btn = document.createElement('button');
-      btn.innerText = '购买';
-      btn.disabled = magic < skill.cost;
-      btn.onclick = () => {
-        alert(`已购买 ${skill.name}，将派发给前线魔术师`);
-      };
-      li.appendChild(btn);
-      shopList.appendChild(li);
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
