--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <title>翻魔法泡泡</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
   <h1>翻魔法泡泡</h1>
+  <p id="username"></p>
   <button id="flipBtn">翻一个泡泡</button>
   <p id="result"></p>
   <a href="shop.html">进入魔法商店</a>
-
   <script src="script.js"></script>
 </body>
 </html>
