FINAL: 完整修复版

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>翻魔法泡泡</title>
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' https://telegram.org https://telegram-web.app; object-src 'none'">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>翻魔法泡泡</h1>
-  <p id="username"></p>
+  <p id="username">加载中...</p>
   <button id="flipBtn">翻一个泡泡</button>
   <p id="result"></p>
   <a href="shop.html">进入魔法商店</a>
